--- a/style.css
+++ b/style.css
@@ -5,17 +5,17 @@
 html{
     scroll-behavior: smooth;
     scroll-padding: 90px;
-    background-color:#4b1d33;
+    background-color:#543634;
 }
 body{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 a { 
     text-decoration: none;
     
 }
 a:hover{
-    color: rgb(156, 173, 179);
+    color: #9cadb3;
 }
 .ancho{
     width: 80%;
@@ -26,8 +26,8 @@ a:hover{
 }
 header {
     width: 100%;
-    background-color: #4b1d33;
-    color: rgb(255, 255, 255);
+    background-color: #543634;
+    color: #c96a10;
     height: 70px;
     position: fixed;
     
@@ -36,7 +36,7 @@ header a{
     padding: 5px 12px;
     text-decoration: none;
     font-weight: bold;
-    color: #ffffff;
+    color: #c96a10;
     text-transform: uppercase;
 
 }
@@ -86,7 +86,7 @@ nav ul li{
     background-position: center center;
 }
 #encabezado h1{
-    font-size: 10em;
+    font-size: 70px;
 }
 #menu{
     background-color: #ffffff;
@@ -111,8 +111,8 @@ button{
     border-radius: 20px;
     border: 2px solid rgba(0, 0, 0, 0.5);
     box-shadow: 2px 2px 10px rgb(0 0 0 / 50%);
-    color: rgb(255, 255, 255);
-    background-color: #4b1d33;
+    color: #c96a10;
+    background-color: #543634;
 }
 footer{
     height: 110px;
@@ -123,3 +123,5 @@ footer{
     font-size: 2.0em;    
     margin-block-end: 1em;
 }
+
+
